@@ -1,3 +1,8 @@
+2006-01-11  Andreas Kupries <andreask@activestate.com>
+
+	* analysis_peg_minimize.tcl: Changed bad reference to 'useful' to
+	  the correct string, 'realizable'.
+
 2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
